# SuperLeaf

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDBOOK.md  NOTICE  README.md  README_EN.md  SECURITY.md  SUPPORT.md  skills-lock.json  start.sh
services/backend/: Dockerfile  cleanup_orphans.py  pyproject.toml  test_branch_merge.py  test_conversation_history.py  test_native_agent_runner_mcp_failure.py  test_pipeline_workflow.py
services/backend/app/: __init__.py  database.py  main.py  migrations.py  models.py  schemas.py  secrets_vault.py  settings.py
services/backend/test/: test_agent_command_anchors.py  test_agent_command_project.py  test_agent_command_registry.py  test_agent_command_write.py  test_annotation_agent_suggestions.py  test_annotation_permissions.py  test_annotation_upsert_security.py  test_auth_collab_token_security.py  test_auth_cookie_security.py  test_auth_registration_security.py  test_backend_docs_security.py  test_backend_mcp_mount_policy.py  test_backend_mcp_protocol.py  test_backend_mcp_rpc.py  test_branch_merge.py  test_browser_codex_context_policy.py  test_browser_tool_visibility_envelope.py  test_codex_context_defaults.py  test_collab_audit_log.py  test_collab_db_only_consistency.py  test_collab_gateway.py  test_collab_snapshot_internal_auth.py  test_collab_snapshot_service.py  test_collab_token_permissions.py  test_compile_audit_permissions.py  (+62 more)
src/backend/: WORKFLOW_COMPLETE_TEST_REPORT.md  WORKFLOW_TEST_RESULTS.md  pyproject.toml  test_loop_membership_routing.py  test_nested_workflow.py  test_roundtable_workflow.py  test_workflow_execution.py
(+691 files in other folders)
