[project]
name = "yuwanlab-backend"
version = "0.0.1"
description = "YuwanLabWriter backend — FastAPI proxy to Dify + local persistence."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy>=2.0",
  "pydantic>=2.8",
  "pydantic-settings>=2.5",
  "httpx>=0.28",
  "python-multipart>=0.0.18",
  "sse-starlette>=2.1",
  "cryptography>=43",
  "bcrypt>=4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
